# g1bson

./: .gitignore  README.md
g1bson-osx/: Makefile  xinput2_test.c
g1bson-osx/g1bson/: GBAppDelegate.h  GBAppDelegate.m  GBController.h  XXArrowView.h  XXArrowView.m  XXArrowWindow.h  XXArrowWindow.m  XXConnection.h  XXConnection.m  XXRemoteXWindows.h  XXRemoteXWindows.m  XXView.h  XXView.m  g1bson-Info.plist  main.m
g1bson-osx/g1bson.xcodeproj/: project.pbxproj
g1bson-osx/g1bson/Base.lproj/: MainMenu.xib
g1bson-osx/g1bsonTests/: g1bsonTests-Info.plist  g1bsonTests.m
g1bson-wm/: .gitignore  Changelog  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  createpackage.sh  depcomp  install-sh  missing  mpwm-control
g1bson-wm/images/: Makefile.am  Makefile.in
g1bson-wm/src/: Config.cpp  ConfigurationError.h  DeviceError.cpp  DeviceError.h  Dock.cpp  Dock.h  DockApp.cpp  DockApp.h  DockItem.cpp  DockItem.h  DockKeyboard.cpp  DockKeyboard.h  DockProcess.cpp  DockProcess.h  GBConfig.cpp  GBConfig.h  KeyboardDevice.cpp  KeyboardDevice.h  Makefile.am  Makefile.in  Manager.cpp  Manager.h  PointerDevice.cpp  PointerDevice.h  Process.cpp  Process.h  UnknownWindowException.h  WMWindow.cpp  WMWindow.h  XConn.cpp  XConn.h  XError.cpp  XError.h  logger.h  main.cpp
libg1bson/: g1bson.c  g1bson.h
