bin_PROGRAMS = mpwm
INCLUDES=-DIMAGEPATH=\"${datadir}/@PACKAGE@/\" -DXCURSORGEN=\"@XCURSORGEN@\"
mpwm_LDADD = $(MPWM_LIBS)

mpwm_SOURCES = main.cpp \
               Manager.cpp \
               Manager.h \
               WMWindow.h \
               WMWindow.cpp \
               logger.h \
               GBConfig.cpp \
               GBConfig.h \
               ConfigurationError.h \
               DeviceError.cpp \
               DeviceError.h \
               UnknownWindowException.h \
               PointerDevice.cpp \
               PointerDevice.h \
               Process.cpp \
               Process.h \
               XConn.cpp \
               XConn.h \
               XError.cpp \
               XError.h \
               KeyboardDevice.cpp \
               KeyboardDevice.h \
               Dock.cpp \
               Dock.h \
               DockApp.cpp \
               DockApp.h \
               DockProcess.cpp \
               DockProcess.h \
               DockItem.cpp \
               DockItem.h \
               DockKeyboard.cpp \
               DockKeyboard.h 
